update docker file

--- a/examples/containerized-workload/sample_component.yaml
+++ b/examples/containerized-workload/sample_component.yaml
@@ -6,6 +6,8 @@ spec:
   workload:
     apiVersion: core.oam.dev/v1alpha2
     kind: ContainerizedWorkload
+    metadata:
+      name: haha
     spec:
       containers:
         - name: wordpress
