--- a/examples/containerized-workload/sample_application_config.yaml
+++ b/examples/containerized-workload/sample_application_config.yaml
@@ -35,19 +35,19 @@ spec:
               name: example-appconfig-trait
             spec:
               replicaCount: 2
-#        - trait:
-#            apiVersion: core.oam.dev/v1alpha2
-#            kind: VolumeTrait
-#            metadata:
-#              name: example-volume-trait
-#            spec:
-#              volumeList:
-#              - containerIndex: 0
-#                paths:
-#                - size: 10Gi
-#                  path: /var/log/test
-#                  storageClassName: alicloud-disk-1
-#                  name: path-1
+        - trait:
+            apiVersion: core.oam.dev/v1alpha2
+            kind: VolumeTrait
+            metadata:
+              name: example-volume-trait
+            spec:
+              volumeList:
+              - containerIndex: 0
+                paths:
+                - size: 10Gi
+                  path: /var/log/test
+                  storageClassName: alicloud-disk-1
+                  name: path-1
 #                - size: 10Gi
 #                  path: /var/log/test2
 #                  storageClassName: alicloud-disk-2
