--- a/examples/containerized-workload-hpa/sample_component.yaml
+++ b/examples/containerized-workload-hpa/sample_component.yaml
@@ -1,35 +1,22 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: Component
 metadata:
-  name: example-component
+  name: compent-hpa
 spec:
   workload:
     apiVersion: core.oam.dev/v1alpha2
     kind: ContainerizedWorkload
     metadata:
-      name: haha
+      name: compent-hpa
     spec:
       containers:
         - name: wordpress
-          image: wordpress:4.6.1-apache
+          image: wordpress:php7.2
           ports:
             - containerPort: 80
               name: wordpress
-            - containerPort: 81
-              name: test
-          env:
-            - name: TEST_ENV
-              value: test
           resources:
             cpu:
               required: "50m"
             memory:
               required: "60Mi"
-  parameters:
-    - name: instance-name
-      required: true
-      fieldPaths:
-        - metadata.name
-    - name: image
-      fieldPaths:
-        - spec.containers[0].image
