--- a/examples/containerized-workload-deploy/sample_component.yaml
+++ b/examples/containerized-workload-deploy/sample_component.yaml
@@ -23,6 +23,11 @@ spec:
               required: "50m"
             memory:
               required: "60Mi"
+          config:
+          - path: /opt/xxx.log
+            value: dddddaaaaaa
+          - path: /opt/abc.log
+            value: xxx
   parameters:
     - name: instance-name
       required: true
