--- a/charts/oam-kubernetes-runtime/templates/traitdefinitions.yaml
+++ b/charts/oam-kubernetes-runtime/templates/traitdefinitions.yaml
@@ -6,3 +6,30 @@ spec:
   workloadRefPath: spec.workloadRef
   definitionRef:
     name: manualscalertraits.core.oam.dev
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: TraitDefinition
+metadata:
+  name: volumetraits.core.oam.dev
+spec:
+  workloadRefPath: spec.workloadRef
+  definitionRef:
+    name: volumetraits.core.oam.dev
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: TraitDefinition
+metadata:
+  name: horizontalpodautoscalertraits.core.oam.dev
+spec:
+  workloadRefPath: spec.workloadRef
+  definitionRef:
+    name: horizontalpodautoscalertraits.core.oam.dev
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: TraitDefinition
+metadata:
+  name: canarytraits.core.oam.dev
+spec:
+  workloadRefPath: spec.workloadRef
+  definitionRef:
+    name: canarytraits.core.oam.dev
