--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_canarytraits.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_canarytraits.yaml
@@ -39,11 +39,12 @@ spec:
                   type: string
                 type: object
               proportion:
+                format: int32
                 type: integer
               type:
                 type: string
               workloadRef:
-                description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                description: WorkloadReference to the workload this trait applies to.
                 properties:
                   apiVersion:
                     description: APIVersion of the referenced object.
@@ -63,10 +64,7 @@ spec:
                 - name
                 type: object
             required:
-            - header
-            - proportion
             - type
-            - workloadRef
             type: object
           status:
             description: A CanaryTraitStatus represents the observed state of a CanaryTrait.
@@ -97,6 +95,29 @@ spec:
                   - reason
                   - status
                   - type
+                  type: object
+                type: array
+              resources:
+                description: Resources managed by this canary trait
+                items:
+                  description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                  properties:
+                    apiVersion:
+                      description: APIVersion of the referenced object.
+                      type: string
+                    kind:
+                      description: Kind of the referenced object.
+                      type: string
+                    name:
+                      description: Name of the referenced object.
+                      type: string
+                    uid:
+                      description: UID of the referenced object.
+                      type: string
+                  required:
+                  - apiVersion
+                  - kind
+                  - name
                   type: object
                 type: array
             type: object
