--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -35,9 +35,6 @@ spec:
           spec:
             description: A ContainerizedWorkloadSpec defines the desired state of a ContainerizedWorkload.
             properties:
-              PointToGrayName:
-                description: old grey workload name need modify match selector
-                type: string
               arch:
                 description: CPUArchitecture required by this workload.
                 enum:
@@ -405,6 +402,7 @@ spec:
               nodeSelector:
                 additionalProperties:
                   type: string
+                description: node select
                 type: object
               osType:
                 description: OperatingSystem required by this workload.
@@ -412,12 +410,14 @@ spec:
                 - linux
                 - windows
                 type: string
+              pointToGrayName:
+                description: old grey workload name need modify match selector
+                type: string
               serviceMesh:
+                description: check is install istio
                 type: boolean
             required:
             - containers
-            - nodeSelector
-            - serviceMesh
             type: object
           status:
             description: A ContainerizedWorkloadStatus represents the observed state of a ContainerizedWorkload.
