--- a/examples/containerized-workload-deploy/sample_application_config.yaml
+++ b/examples/containerized-workload-deploy/sample_application_config.yaml
@@ -1,11 +1,11 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: ApplicationConfiguration
 metadata:
-  name: example-appconfig
+  name: example-deploy
   namespace: default
 spec:
   components:
-    - componentName: component-dep
+    - componentName: component-deploy
       parameterValues:
         - name: instance-name
           value: component-dev
