--- a/examples/containerized-workload-deploy/sample_component.yaml
+++ b/examples/containerized-workload-deploy/sample_component.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: Component
 metadata:
-  name: component-dep
+  name: component-deploy
   namespace: default
 spec:
   workload:
