--- a/examples/containerized-workload-sts/sample_application_config.yaml
+++ b/examples/containerized-workload-sts/sample_application_config.yaml
@@ -1,10 +1,10 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: ApplicationConfiguration
 metadata:
-  name: example-appconfig
+  name: example-sts
 spec:
   components:
-    - componentName: oam-sts
+    - componentName: oam-component-sts
       traits:
         - trait:
             apiVersion: core.oam.dev/v1alpha2
