--- a/examples/containerized-workload-sts/sample_component.yaml
+++ b/examples/containerized-workload-sts/sample_component.yaml
@@ -7,7 +7,7 @@ spec:
     apiVersion: core.oam.dev/v1alpha2
     kind: ContainerizedWorkload
     metadata:
-      name: oam-workload-sts
+      name: oam-component-sts
     spec:
       containers:
         - name: wordpress
