fix bug: add new commit,not label app.id

--- a/examples/containerized-workload-deploy/sample_component.yaml
+++ b/examples/containerized-workload-deploy/sample_component.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: Component
 metadata:
-  name: component-deploy
+  name: component-dep
   namespace: default
 spec:
   workload:
@@ -21,7 +21,7 @@ spec:
               value: test
           resources:
             cpu:
-              required: "50m"
+              required: "60m"
             memory:
               required: "60Mi"
   parameters:
