--- a/examples/containerized-workload-deploy/sample_application_config.yaml
+++ b/examples/containerized-workload-deploy/sample_application_config.yaml
@@ -5,18 +5,30 @@ metadata:
   namespace: default
 spec:
   components:
-    - componentName: component-deploy
+    - componentName: component-dep
       parameterValues:
         - name: instance-name
-          value: component-dev
+          value: component-dev1
+        - name: image
+          value: wordpress:php7.2
+    - componentName: component-dep
+      parameterValues:
+        - name: instance-name
+          value: component-dev2
         - name: image
           value: wordpress:php7.2
       traits:
         - trait:
             apiVersion: core.oam.dev/v1alpha2
-            kind: ManualScalerTrait
+            kind: VolumeTrait
             metadata:
-              name: example-appconfig-trait
+              name: component-dev2
             spec:
-              replicaCount: 2
+              volumeList:
+              - containerIndex: 0
+                paths:
+                - size: 20Gi
+                  path: /var/log/test
+                  storageClassName: alicloud-disk
+                  name: path-1
 
