--- a/examples/containerized-workload-sts/sample_application_config.yaml
+++ b/examples/containerized-workload-sts/sample_application_config.yaml
@@ -12,14 +12,15 @@ spec:
             metadata:
               name: oam-volume-trait
             spec:
-              volumeList:
-              - containerIndex: 0
-                paths:
-                - size: 20Gi
-                  path: /var/log/test
-                  storageClassName: alicloud-disk
-                  name: path-1
-                - size: 20Gi
-                  path: /var/log/test2
-                  storageClassName: alicloud-disk
-                  name: path-2
+              volumeList: []
+#              volumeList:
+#              - containerIndex: 0
+#                paths:
+#                - size: 20Gi
+#                  path: /var/log/test
+#                  storageClassName: alicloud-disk
+#                  name: path-1
+#                - size: 20Gi
+#                  path: /var/log/test2
+#                  storageClassName: alicloud-disk
+#                  name: path-2
