--- a/legacy/charts/oam-kubernetes-runtime-legacy/crds/core.oam.dev_volumetraits.yaml
+++ b/legacy/charts/oam-kubernetes-runtime-legacy/crds/core.oam.dev_volumetraits.yaml
@@ -37,11 +37,13 @@ spec:
           properties:
             volumeList:
               items:
+                description: VolumeMountItem contains path of container
                 properties:
                   containerIndex:
                     type: integer
                   paths:
                     items:
+                      description: PathItem define storageClass, size, path, name
                       properties:
                         name:
                           type: string
