--- a/examples/containerized-workload-sts/sample_application_config.yaml
+++ b/examples/containerized-workload-sts/sample_application_config.yaml
@@ -5,32 +5,32 @@ metadata:
 spec:
   components:
     - componentName: oam-component-sts
-#      traits:
-#        - trait:
-#            apiVersion: core.oam.dev/v1alpha2
-#            kind: VolumeTrait
-#            metadata:
-#              name: oam-volume-trait
-#            spec:
+      traits:
+        - trait:
+            apiVersion: core.oam.dev/v1alpha2
+            kind: VolumeTrait
+            metadata:
+              name: oam-volume-trait
+            spec:
 #              volumeList: []
-#              volumeList:
-#              - containerIndex: 0
-#                paths:
-#                - size: 20Gi
-#                  path: /var/log/test3
-#                  storageClassName: managed-nfs-storage
-#                  name: path-1
-#                - size: 20Gi
-#                  path: /var/log/test2
-#                  storageClassName: managed-nfs-storage
-#                  name: path-2
-#              - containerIndex: 1
-#                paths:
-#                  - size: 20Gi
-#                    path: /var/log/test3
-#                    storageClassName: managed-nfs-storage
-#                    name: path-1
-#                  - size: 20Gi
-#                    path: /var/log/test2
-#                    storageClassName: managed-nfs-storage
-#                    name: path-2
+              volumeList:
+              - containerIndex: 0
+                paths:
+                - size: 20Gi
+                  path: /var/log/test3
+                  storageClassName: managed-nfs-storage
+                  name: path-1
+                - size: 20Gi
+                  path: /var/log/test2
+                  storageClassName: managed-nfs-storage
+                  name: path-2
+              - containerIndex: 1
+                paths:
+                  - size: 20Gi
+                    path: /var/log/test3
+                    storageClassName: managed-nfs-storage
+                    name: path-1
+                  - size: 20Gi
+                    path: /var/log/test2
+                    storageClassName: managed-nfs-storage
+                    name: path-2
