--- a/examples/webhook-enabled/definition.yaml
+++ b/examples/webhook-enabled/definition.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: foo.example.com
@@ -10,7 +10,6 @@ spec:
     plural: foo
     singular: foo
   scope: Namespaced
-  version: v1
   preserveUnknownFields: true
 ---
 apiVersion: core.oam.dev/v1alpha2
