--- a/legacy/charts/oam-kubernetes-runtime-legacy/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/legacy/charts/oam-kubernetes-runtime-legacy/crds/core.oam.dev_containerizedworkloads.yaml
@@ -87,6 +87,7 @@ spec:
                           type: string
                       required:
                       - path
+                      - value
                       type: object
                     type: array
                   env:
