代码优化： 补充镜像拉取策略 Always

--- a/examples/two-container/sample_component.yaml
+++ b/examples/two-container/sample_component.yaml
@@ -12,6 +12,9 @@ spec:
       containers:
         - name: nginx
           image: nginx
+#          command:
+#            - sleep
+#            - '1000'
         - name: redis
           image: redis
           ports:
