--- a/charts/oam-kubernetes-runtime/templates/webhook.yaml
+++ b/charts/oam-kubernetes-runtime/templates/webhook.yaml
@@ -79,6 +79,22 @@ webhooks:
     admissionReviewVersions: ["v1beta1"]
     failurePolicy: Fail
     timeoutSeconds: 5
+  - name: "mutate.apps.v1.workloads"
+    clientConfig:
+      service:
+        name: {{ template "oam-kubernetes-runtime.name" . }}-webhook
+        namespace: {{.Release.Namespace}}
+        path: /mutating-apps-v1-workloads
+      caBundle: "{{.Values.certificate.caBundle}}"
+    rules:
+      - apiGroups:   ["apps"]
+        apiVersions: ["v1"]
+        operations:  ["CREATE", "UPDATE"]
+        resources:   ["deployments,statefulsets"]
+        scope:       "Namespaced"
+    admissionReviewVersions: ["v1beta1"]
+    failurePolicy: Fail
+    timeoutSeconds: 5
 ---
 apiVersion: v1
 kind: Service
@@ -96,4 +112,4 @@ spec:
   selector:
     {{ include "oam-kubernetes-runtime.selectorLabels" . | nindent 6 }}
 
-{{- end -}}
+  {{- end -}}
