refactor(root): refactor log
1. replace logr with klog/v2

--- a/examples/two-container/sample_application_config.yaml
+++ b/examples/two-container/sample_application_config.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: ApplicationConfiguration
 metadata:
-  name: two-container
+  name: two-container-2
 spec:
   components:
     - componentName: two-container
