fix(root): fix bug configmap can not create
1. add validate of config path

--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -78,6 +78,7 @@ spec:
                             type: object
                           path:
                             description: Path within the container at which the configuration file should be written.
+                            pattern: ^/.*[^/ ]$
                             type: string
                           subPath:
                             description: Path within the volume from which the container's volume should be mounted. Defaults to "" (volume's root).
