--- a/legacy/charts/oam-kubernetes-runtime-legacy/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/legacy/charts/oam-kubernetes-runtime-legacy/crds/core.oam.dev_containerizedworkloads.yaml
@@ -67,10 +67,8 @@ spec:
                           description: FromSecret is a secret key reference which can be used to assign a value to be written to the configuration file at the given path in the container.
                           properties:
                             key:
-                              description: The key to select.
                               type: string
                             name:
-                              description: The name of the secret.
                               type: string
                           required:
                           - key
@@ -78,6 +76,7 @@ spec:
                           type: object
                         path:
                           description: Path within the container at which the configuration file should be written.
+                          pattern: ^/.*[^/ ]$
                           type: string
                         subPath:
                           description: Path within the volume from which the container's volume should be mounted. Defaults to "" (volume's root).
@@ -99,10 +98,8 @@ spec:
                           description: FromSecret is a secret key reference which can be used to assign a value to the environment variable.
                           properties:
                             key:
-                              description: The key to select.
                               type: string
                             name:
-                              description: The name of the secret.
                               type: string
                           required:
                           - key
@@ -307,7 +304,6 @@ spec:
                         description: CPU required by this container.
                         properties:
                           required:
-                            description: Required CPU count. 1.0 represents one CPU core.
                             type: string
                         required:
                         - required
