--- a/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/oam-kubernetes-runtime/crds/core.oam.dev_containerizedworkloads.yaml
@@ -78,7 +78,6 @@ spec:
                             type: object
                           path:
                             description: Path within the container at which the configuration file should be written.
-                            pattern: ^/.*[^/ ]$
                             type: string
                           subPath:
                             description: Path within the volume from which the container's volume should be mounted. Defaults to "" (volume's root).
@@ -213,13 +212,17 @@ spec:
                             description: Port number. Must be unique within its container.
                             format: int32
                             type: integer
+                          hostPort:
+                            description: Number of port to expose on the host. If specified, this must be a valid port number, 0 < x < 65536. If HostNetwork is specified, this must match ContainerPort. Most containers do not need this.
+                            format: int32
+                            type: integer
                           name:
                             type: string
                           protocol:
                             description: 'TODO(negz): Use +kubebuilder:default marker to default Protocol to TCP once we''re generating v1 CRDs. Protocol used by the server listening on this port.'
                             enum:
-                            - TCP
-                            - UDP
+                              - TCP
+                              - UDP
                             type: string
                         required:
                         - containerPort
