--- a/examples/containerized-workload-sts/sample_application_config.yaml
+++ b/examples/containerized-workload-sts/sample_application_config.yaml
@@ -10,21 +10,11 @@ spec:
             apiVersion: core.oam.dev/v1alpha2
             kind: VolumeTrait
             metadata:
-              name: oam-volume-trait
+              name: oam-component-sts
             spec:
 #              volumeList: []
               volumeList:
               - containerIndex: 0
-                paths:
-                - size: 20Gi
-                  path: /var/log/test3
-                  storageClassName: managed-nfs-storage
-                  name: path-1
-                - size: 20Gi
-                  path: /var/log/test2
-                  storageClassName: managed-nfs-storage
-                  name: path-2
-              - containerIndex: 1
                 paths:
                   - size: 20Gi
                     path: /var/log/test3
@@ -34,3 +24,14 @@ spec:
                     path: /var/log/test2
                     storageClassName: managed-nfs-storage
                     name: path-2
+              - containerIndex: 1
+                paths:
+                  - size: 20Gi
+                    path: /var/log/test3
+                    name: path-1
+                    type: HostPath
+                  - size: 20Gi
+                    path: /var/log/test2
+                    storageClassName: managed-nfs-storage
+                    name: path-2
+
